# cookiecutter-namespace-template

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.rst  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.rst  README.rst  __about__.py  constraints_dev.txt  cookiecutter.json  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci.yml  pre-commit.yml
docs/: Makefile  conf.py  console-script-setup.rst  index.rst  prompts.rst  pypi-release-checklist.rst  tutorial.rst
hooks/: __init__.py  post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .bumpversion.toml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  constraints_dev.txt  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.package_name}}/: __init__.py  cli.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_{{cookiecutter.namespace}}-{{cookiecutter.package_name}}.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/{{cookiecutter.namespace}}/: __about__.py  __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.namespace}}/{{cookiecutter.package_name}}/: __init__.py  cli.py
