[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "cookiecutter-namespace-template"
dynamic = ["version"]
description = "Cookiecutter template for a Python namespace package"
readme = "README.rst"
authors = [{ name = "Veit Schiele", email = "veit@cusy.io" }]
license = "BSD-3-Clause"
requires-python = ">=3.9"
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cookiecutter"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cookies",
    "tox",
]
docs = [
    "sphinx",
    "furo",
]
dev = [
    "cookiecutter-namespace-template[tests, docs]",
    "pre-commit",
    "codespell",
    "tomli; python_version < '3.11'"
]

[project.urls]
Documentation = "https://cookiecutter-namespace-template.readthedocs.io/"
"Bug Tracker" = "https://github.com/veit/cookiecutter-namespace-template/issues"
"Source Code" = "https://github.com/veit/cookiecutter-namespace-template"

[tool.black]
line-length = 79

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true

known_first_party="cookiecutter-namespace-template"

[tool.codespell]
ignore-words-list = ["ninjs"]
