[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "cookiecutter-namespace-template"
dynamic = ["version"]
description = "Cookiecutter template for a Python namespace package"
readme = "README.rst"
License-Expression = "BSD-3-Clause"
License-File = [ "LICENSE" ]
authors = [{ name = "Veit Schiele", email = "veit@cusy.io" }]
requires-python = ">=3.10"
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cookiecutter"
]

[dependency-groups]
tests = [
    "pytest",
    "pytest-cookies",
    "tox",
]
docs = [
    "sphinx",
    "furo",
]
dev = [
    {include-group = "tests"},
    {include-group = "docs"},
    "pre-commit",
    "codespell",
    "tomli; python_version < '3.11'"
]

[project.urls]
Documentation = "https://cookiecutter-namespace-template.readthedocs.io/"
"Bug Tracker" = "https://github.com/veit/cookiecutter-namespace-template/issues"
"Source Code" = "https://github.com/veit/cookiecutter-namespace-template"

[tool.ruff]
src = ["tests"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",       # Shaddowing is fine
    "ANN",     # We don’t use type annotations
    "COM812",  # May cause conflicts when used with the formatter
    "D203",    # It’s incompatible to D211
    "D213",    # It’s incompatible to D212
    "PLR0133", # Cookiecutter variables are not constants
    "T201",    # print is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert in tests is fine
]

[tool.codespell]
ignore-words-list = ["ninjs"]
