[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "cookiecutter-namespace-template"
dynamic = ["version"]
description = "Cookiecutter template for a Python namespace package"
readme = "README.rst"
License-Expression = "BSD-3-Clause"
License-File = [ "LICENSE" ]
authors = [{ name = "Veit Schiele", email = "veit@cusy.io" }]
requires-python = ">=3.10"
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cookiecutter"
]

[dependency-groups]
tests = [
    "pytest>=9",
    "pytest-cookies",
    "pytest-cov",
    "tox-uv>=1.16",
]
docs = [
    "sphinx",
    "furo",
]
dev = [
    {include-group = "tests"},
    {include-group = "docs"},
    "pre-commit",
    "codespell",
    "tomli; python_version < '3.11'"
]

[project.urls]
Documentation = "https://cookiecutter-namespace-template.readthedocs.io/"
"Bug Tracker" = "https://github.com/veit/cookiecutter-namespace-template/issues"
"Source Code" = "https://github.com/veit/cookiecutter-namespace-template"

[tool.pytest]
minversion = "9.0"
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
testpaths = [
  "tests",
]

[tool.ruff]
src = ["tests"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",       # Shaddowing is fine
    "ANN",     # We don’t use type annotations
    "COM812",  # May cause conflicts when used with the formatter
    "D203",    # It’s incompatible to D211
    "D213",    # It’s incompatible to D212
    "PLR0133", # Cookiecutter variables are not constants
    "T201",    # print is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert in tests is fine
]

[tool.codespell]
ignore-words-list = ["ninjs"]

[tool.coverage]
paths.source = [ "src", ".tox/py*/**/site-packages" ]
report.show_missing = true
report.skip_covered = true
report.exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
]

[tool.tox]
requires = [ "tox>=4" ]
env_list = [
  "pre-commit",
  "docs",
  "py3{10-14}",
  "py{13-14}t",
  "pypy",
  "coverage-report",
]
isolated_build_env = "True"
skip_missing_interpreters = true
env.pre-commit.description = "Run all pre-commit hooks."
env.pre-commit.deps = [
  "pre-commit",
]
env.pre-commit.skip_install = true
env.pre-commit.commands = [
  [ "pre-commit", "run", "--all-files" ],
]
# Keep base_python in sync with ci.yml and .readthedocs.yaml.
env.docs.base_python = [ "py313" ]
env.docs.deps = [ "interrogate" ]
env.docs.dependency_groups = [ "docs" ]
env.docs.commands = [
  [
    "sphinx-build",
    "-n",
    "-T",
    "-W",
    "-b",
    "html",
    "-d",
    "{envtmpdir}/doctrees",
    "docs",
    "docs/_build/html"
  ],
  [
    "sphinx-build",
    "-n",
    "-T",
    "-W",
    "-b",
    "doctest",
    "-d",
    "{envtmpdir}/doctrees",
    "docs",
    "docs/_build/html"
  ],
]
env.docs-linkcheck.base_python = [ "{[tool.tox.env.docs]base_python}" ]
env.docs-linkcheck.dependency_groups = [ "docs" ]
env.docs-linkcheck.commands = [
  [ "sphinx-build", "-W", "-b", "linkcheck", "-d", "{envtmpdir}/doctrees", "docs", "docs/_build/html" ]
]
env.coverage-report.description = "Report coverage over all test runs."
env.coverage-report.deps = [ "coverage[toml]" ]
env.coverage-report.depends = [ "py" ]
env.coverage-report.skip_install = true
env.coverage-report.commands = [
  [ "coverage", "combine" ],
  [ "coverage", "report" ],
]
env_run_base.dependency_groups = [ "tests" ]
env_run_base.deps = [ "coverage[toml]" ]
env_run_base.commands = [
  [ "python", "--version", "--version" ],
  [ "coverage", "run", "-m", "pytest", "{posargs}" ],
]
