[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

{%- set license_classifiers = {
    "MIT": "License :: OSI Approved :: MIT License",
    "BSD-2-Clause": "License :: OSI Approved :: BSD License",
    "BSD-3-Clause": "License :: OSI Approved :: BSD License",
    "Apache-2.0": "License :: OSI Approved :: Apache Software License",
    "GPL-3.0-only": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "GPL-3.0-or-later": "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Other/Proprietary License": "Private :: Do Not Upload"
} %}

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
authors = [{ name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" }]
license = "{{ cookiecutter.license }}"
requires-python = ">=3.7"
description = "{{ cookiecutter.project_short_description }}"
keywords = ["{{ cookiecutter.project_slug }}"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
{%- if cookiecutter.license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.license] }}",
{%- endif %}
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    {%- if cookiecutter.command_line_interface|lower == "typer" %}
    "typer[all]",
    {%- endif %}
    {%- if cookiecutter.command_line_interface|lower == "click" %}
    "Click>=6.0",
    {%- endif %}
]

[project.optional-dependencies]
tests = [
    {% if cookiecutter.use_pytest == "y" -%}
    "pytest",
    "pytest-cookies",
    "tox",
    "flake8"
{% endif %}]
docs = [
    "sphinx",
    "furo",
]
build = [
    "build",
    "twine",
    "pep517"
]
dev = [
    "{{ cookiecutter.project_slug }}[tests, docs]",
    "pre-commit",
    "cruft",
    "black",
    "isort",
]

[tool.black]
line-length = 79
skip-string-normalization = true
