[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
authors = [{ name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" }]
{% if cookiecutter.license != "Other/Proprietary License" %}
License-Expression = "{{ cookiecutter.license }}"
License-File = [ "LICENSE" ]
{% endif %}
requires-python = ">=3.9"
description = "{{ cookiecutter.project_short_description }}"
keywords = ["{{ cookiecutter.project_slug }}"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
{% if cookiecutter.license == "Other/Proprietary License" %}
    "Private :: Do Not Upload",
{% endif %}
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "setuptools",
    {%- if cookiecutter.command_line_interface|lower == "typer" %}
    "typer[all]",
    {%- endif %}
    {%- if cookiecutter.command_line_interface|lower == "click" %}
    "Click>=6.0",
    {%- endif %}
]

[dependency-groups]
tests = [
    {% if cookiecutter.use_pytest == "y" -%}
    "pytest",
    "pytest-cookies",
    "tox",
    "flake8"
{% endif %}]
docs = [
    "sphinx",
    "furo",
]
build = [
    "build",
    "twine",
    "pep517",
    "bump-my-version"
]
dev = [
    {include-group = "tests"},
    {include-group = "docs"},
    {include-group = "build"},
    "pre-commit",
    "cruft",
]

{% if cookiecutter.use_ruff == 'y' %}
[tool.ruff]
src = ["src", "tests"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",     # We don’t use type annotations
    "D203",    # It’s incompatible to D211
    "D213",    # It’s incompatible to D212
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ERA001",  # Commented-out code in test examples is fine
    "S101",    # assert in tests is fine
]
{%- endif %}

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.namespace }}"]
